--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     font-size: 18px; /* Ajustado para melhorar a legibilidade */
-    background-color: darkblue;
-    color: yellow;
+    background-color: rgb(1, 1, 14);
+    color: rgb(109, 197, 219);
     font-family: "Gupter", serif;
     text-align: center;
     margin: 0;
